@@ -41,8 +41,11 @@
                 <a href = "JFocus/JFocus3B/JFocus3B.html" class = "sourceCodeEmoji">
                     JFocus3B
                 </a>
-                <a class = "sourceCodeEmoji" onclick="confirmExitCustom1()">
+                <a href = "JFocus/JFocus4/JFocus4.html" class = "sourceCodeEmoji">
                     JFocus4
+                </a>
+                <a class = "sourceCodeEmoji" onclick="confirmExitCustom1()">
+                    JFocus5
                     <p class = "postletter">(Developer View)</p>
                 </a>
             </article>
