@@ -8,8 +8,8 @@
         <script src = "JSJFocus4.js"></script>
         <body class = "flexBody">
             <article class = "flexArticle">
-                <div>
-                    <button onclick="calculateBMI()" class = "BMIButton">Calculate your BMI!</button>
+                <div class = "centerDiv">
+                    <button onclick="calculateBMISimple()" class = "BMIButton">Calculate your BMI!</button>
                 </div>
             </article>
         </body>
